--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "5.19.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
-    "prisma": "^7.2.0",
+    "prisma": "5.19.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
